#10 Fix spacing and widths of components

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,11 +5,7 @@
 html,
 body,
 #root {
-    height: 100%;
+    height: 100vh;
     overflow-x: hidden;
     max-width: 100%;
-}
-
-* {
-    box-sizing: border-box;
 }
